updated at: 2020-01-16 06:39, 白色工業パスケース - ふしめろ - BOOTH

--- a/VRChat/27/922027.html
+++ b/VRChat/27/922027.html
@@ -75,9 +75,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "hushimero" data-product-category="165" data-product-id=
-        "922027" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="hushimero" data-product-category="165"
+        data-product-id="922027" data-product-list="market_show"
         data-product-price="2050" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -101,17 +101,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -122,13 +122,13 @@
                             <img alt="ふしめろ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1830139/icon_image/8611bb57-97be-4e53-aaf7-c00a86ee6e72_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               ふしめろ
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           白色工業パスケース
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -224,17 +224,15 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/922027"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text="白色工業パスケース | ふしめろ"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/922027"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text="白色工業パスケース | ふしめろ" data-count=
+                          "none" class="twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/922027"
@@ -244,7 +242,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -277,8 +275,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             白色工業の社章入りパスケースです。
                             白色工業は権利的に問題ない3Dモデルを自作（権利クリアしてるなら二次創作もOK）した人が自由に加入できるグループです。
                             元々はVRCグループですが、リアルでも白色工業を自称したい人にお勧めです。
@@ -288,7 +286,8 @@
                             <div class="item-detail">
                               <p>
                                 <span class=
-                                "autolink">素材：レザー（合皮）<br>
+                                "autolink u-text-wrap">素材：レザー（合皮）<br>
+
                                 実寸サイズ(mm)：70 x 105<br>
                                 ※直径4mmのストラップ用の穴がついております。<br>
                                 詳細なイメージは<a target="_blank" href=
@@ -296,7 +295,8 @@
                               </p>
                             </div>
                             <h4>
-                              <span class="autolink">発送予定日</span>
+                              <span class=
+                              "autolink u-text-wrap">発送予定日</span>
                             </h4>
                             <div class="item-detail">
                               <table class="condensed">
@@ -307,15 +307,14 @@
                                   <td class="is-right"></td>
                                 </tr>
                               </table><span class=
-                              "autolink"><small class=
+                              "autolink u-text-wrap"><small class=
                               "memo">※お振込を確認してから製造を開始するため、銀行・コンビニ決済でお支払いの際は記載されている発送予定日より遅くなる場合があります。</small></span>
                             </div>
                           </div>
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
