--- a/VRChat/56/871556.html
+++ b/VRChat/56/871556.html
@@ -78,9 +78,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "kleusbalut" data-product-category="141" data-product-id=
-        "871556" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="kleusbalut" data-product-category="141"
+        data-product-id="871556" data-product-list="market_show"
         data-product-price="300" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -105,17 +105,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -126,13 +126,13 @@
                             <img alt="クレウスのショップ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/671200/icon_image/41821f84-7eba-471a-b4c8-533b8ec21a8b_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               クレウスのショップ
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           マッハ新書「VRでベル麻痺を克服しようとした試みの記録」
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -221,18 +221,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/871556"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "マッハ新書「VRでベル麻痺を克服しようとした試みの記録」 | クレウスのショップ"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/871556"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "マッハ新書「VRでベル麻痺を克服しようとした試みの記録」 | クレウスのショップ"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/871556"
@@ -242,7 +241,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -276,8 +275,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             ※注意: 18/07/27現在、執筆途中です。
                             進捗はサムネイル画像をご確認ください。 順次アップデートしていきます。
                             2018年5月のゴールデンウィークに突然ベル麻痺(顔面神経麻痺)になったVRChatプレイヤーの苦悩と試行錯誤の記録。
@@ -286,8 +285,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
