updated at: 2020-01-16 17:15, オリジナル3Dモデル「RiLF」Ver1.03 - ゆどのん工房 - BOOTH

--- a/VRChat/50/1262150.html
+++ b/VRChat/50/1262150.html
@@ -6,7 +6,7 @@
       オリジナル3Dモデル「RiLF」Ver1.03 - ゆどのん工房 - BOOTH
     </title>
     <meta name="description" content=
-    "＠バーチャルマーケット2にて試着できます！ オリジナル3Dモデル「RiLF(リルフ)」について VRchat用を想定したモデルですが、ゲームなど他用途にも利用可能です。 目、眉、口に分けたシェイプキーが入っていますので、 組み合わせて表情の作成もできます。 更新履歴 2019.03.07　ver1.01 　　　　　　Animatorに該当アバターが指定されていなかったのを修正 　　　　　　ver1.02 　　　　　　瞬き干渉防止を導入 　　　　　　ver1.03　　　　　　 　　　　　　FBXをパーツ分け、ダイナミックボーンの設定を変更 　　　　　　Unityで袖とベルトを外せるように">
+    "オリジナル3Dモデル「RiLF(リルフ)」について VRchat用を想定したモデルですが、ゲームなど他用途にも利用可能です。 目、眉、口に分けたシェイプキーが入っていますので、 組み合わせて表情の作成もできます。 更新履歴 2019.03.07　ver1.01 　　　　　　Animatorに該当アバターが指定されていなかったのを修正 　　　　　　ver1.02 　　　　　　瞬き干渉防止を導入 　　　　　　ver1.03　　　　　　 　　　　　　FBXをパーツ分け、ダイナミックボーンの設定を変更 　　　　　　Unityで袖とベルトを外せるように 　　　　　　FISTの表情を削除">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1262150">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "オリジナル3Dモデル「RiLF」Ver1.03 - ゆどのん工房 - BOOTH">
     <meta name="twitter:description" content=
-    "＠バーチャルマーケット2にて試着できます！ オリジナル3Dモデル「RiLF(リルフ)」について VRchat用を想定したモデルですが、ゲームなど他用途にも利用可能です。 目、眉、口に分けたシェイプキーが入っていますので、 組み合わせて表情の作成もできます。 更新履歴 2019.03.07　ver1.01 　　　　　　Animatorに該当アバターが指定されていなかったのを修正 　　　　　　ver1.02 　　　　　　瞬き干渉防止を導入 　　　　　　ver1.03　　　　　　 　　　　　　FBXをパーツ分け、ダイナミックボーンの設定を変更 　　　　　　Unityで袖とベルトを外せるように">
+    "オリジナル3Dモデル「RiLF(リルフ)」について VRchat用を想定したモデルですが、ゲームなど他用途にも利用可能です。 目、眉、口に分けたシェイプキーが入っていますので、 組み合わせて表情の作成もできます。 更新履歴 2019.03.07　ver1.01 　　　　　　Animatorに該当アバターが指定されていなかったのを修正 　　　　　　ver1.02 　　　　　　瞬き干渉防止を導入 　　　　　　ver1.03　　　　　　 　　　　　　FBXをパーツ分け、ダイナミックボーンの設定を変更 　　　　　　Unityで袖とベルトを外せるように 　　　　　　FISTの表情を削除">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/a5a208c6-bf51-4e00-b329-85b58f98dab8/i/1262150/0f8bd636-2a74-4a04-96b7-cc2e8b787125_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "オリジナル3Dモデル「RiLF」Ver1.03 - ゆどのん工房 - BOOTH">
     <meta property="og:description" content=
-    "＠バーチャルマーケット2にて試着できます！ オリジナル3Dモデル「RiLF(リルフ)」について VRchat用を想定したモデルですが、ゲームなど他用途にも利用可能です。 目、眉、口に分けたシェイプキーが入っていますので、 組み合わせて表情の作成もできます。 更新履歴 2019.03.07　ver1.01 　　　　　　Animatorに該当アバターが指定されていなかったのを修正 　　　　　　ver1.02 　　　　　　瞬き干渉防止を導入 　　　　　　ver1.03　　　　　　 　　　　　　FBXをパーツ分け、ダイナミックボーンの設定を変更 　　　　　　Unityで袖とベルトを外せるように">
+    "オリジナル3Dモデル「RiLF(リルフ)」について VRchat用を想定したモデルですが、ゲームなど他用途にも利用可能です。 目、眉、口に分けたシェイプキーが入っていますので、 組み合わせて表情の作成もできます。 更新履歴 2019.03.07　ver1.01 　　　　　　Animatorに該当アバターが指定されていなかったのを修正 　　　　　　ver1.02 　　　　　　瞬き干渉防止を導入 　　　　　　ver1.03　　　　　　 　　　　　　FBXをパーツ分け、ダイナミックボーンの設定を変更 　　　　　　Unityで袖とベルトを外せるように 　　　　　　FISTの表情を削除">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/a5a208c6-bf51-4e00-b329-85b58f98dab8/i/1262150/0f8bd636-2a74-4a04-96b7-cc2e8b787125_base_resized.jpg">
     <meta property="og:url" content=
@@ -324,7 +324,6 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            ＠バーチャルマーケット2にて試着できます！
                             オリジナル3Dモデル「RiLF(リルフ)」について
                             VRchat用を想定したモデルですが、ゲームなど他用途にも利用可能です。
                             目、眉、口に分けたシェイプキーが入っていますので、
