updated at: 2020-01-16 20:58, VRChat用【外付け頬染め「hoo」】 - ローレライ社 - BOOTH

--- a/VRChat/27/1141927.html
+++ b/VRChat/27/1141927.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      VRChat用【外付け頬染め「hoo」】 - シレーヌの難破船倉庫 - BOOTH
+      VRChat用【外付け頬染め「hoo」】 - ローレライ社 - BOOTH
     </title>
     <meta name="description" content=
     "VRChat用途想定【外付け頬染め「hoo」】 ・モデル説明 製作者：シレーヌ ――――――内容物―――――― ・「hoo」FBXファイル x1種 ポリゴン数：△6 hooの見本sample画像 x3種 hoo用テクスチャ x3種 hoo用テクスチャ(UV) x1種 reedme x1種 ―――有償版のみ――― hooセットアップガイド画像 x5種 ※無償版と有償版の違いは導入用解説画像x5枚の有無のみです。 ※サンプル画像等に写っているシャオマオモデルは付属しません。 ――――――使用方法と規約―――――― このアイテムは主にVRChatで頬染めの無いアバターに付けることを想定しています。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "VRChat用【外付け頬染め「hoo」】 - シレーヌの難破船倉庫 - BOOTH">
+    "VRChat用【外付け頬染め「hoo」】 - ローレライ社 - BOOTH">
     <meta name="twitter:description" content=
     "VRChat用途想定【外付け頬染め「hoo」】 ・モデル説明 製作者：シレーヌ ――――――内容物―――――― ・「hoo」FBXファイル x1種 ポリゴン数：△6 hooの見本sample画像 x3種 hoo用テクスチャ x3種 hoo用テクスチャ(UV) x1種 reedme x1種 ―――有償版のみ――― hooセットアップガイド画像 x5種 ※無償版と有償版の違いは導入用解説画像x5枚の有無のみです。 ※サンプル画像等に写っているシャオマオモデルは付属しません。 ――――――使用方法と規約―――――― このアイテムは主にVRChatで頬染めの無いアバターに付けることを想定しています。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/09e6cc8d-185e-4da8-9f48-92491b6f6102/i/1141927/fdd95286-4e7c-4122-88ac-7aa0a896dc2b_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "VRChat用【外付け頬染め「hoo」】 - シレーヌの難破船倉庫 - BOOTH">
+    "VRChat用【外付け頬染め「hoo」】 - ローレライ社 - BOOTH">
     <meta property="og:description" content=
     "VRChat用途想定【外付け頬染め「hoo」】 ・モデル説明 製作者：シレーヌ ――――――内容物―――――― ・「hoo」FBXファイル x1種 ポリゴン数：△6 hooの見本sample画像 x3種 hoo用テクスチャ x3種 hoo用テクスチャ(UV) x1種 reedme x1種 ―――有償版のみ――― hooセットアップガイド画像 x5種 ※無償版と有償版の違いは導入用解説画像x5枚の有無のみです。 ※サンプル画像等に写っているシャオマオモデルは付属しません。 ――――――使用方法と規約―――――― このアイテムは主にVRChatで頬染めの無いアバターに付けることを想定しています。">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://sirene.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="シレーヌの難破船倉庫" class=
+                            <img alt="ローレライ社" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/270301/icon_image/cf2d364b-1d7a-4bf1-9265-6d20b91b5575_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              シレーヌの難破船倉庫
+                              ローレライ社
                             </div>
                           </div></a>
                         </div>
@@ -272,8 +272,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1141927"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text=
-                          "VRChat用【外付け頬染め「hoo」】 | シレーヌの難破船倉庫"
+                          data-text="VRChat用【外付け頬染め「hoo」】 | ローレライ社"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
