updated at: 2020-01-16 21:42, オリジナル3Dモデル「NiKo」Ver1.06 - ゆどのん工房 - BOOTH

--- a/VRChat/94/1111694.html
+++ b/VRChat/94/1111694.html
@@ -6,7 +6,7 @@
       オリジナル3Dモデル「NiKo」Ver1.06 - ゆどのん工房 - BOOTH
     </title>
     <meta name="description" content=
-    "＠バーチャルマーケット2にて試着できます！ VRchat用を想定したモデルですが、ゲームなど他用途にも利用可能です。 目、眉、口に分けたシェイプキーが入っていますので、組み合わせて表情の作成もできます。 更新履歴 2018.12.19 ・長袖デニムジャケット、ボアブーツ追加 　　　　　　・追加に伴い価格改定\3000→\3500 2019.02.27　・コートウェイト等調整、肩ボーン、UV調整 2019.03.07　・瞬き干渉防止を導入 2019.05.08　・パーツ分けしたFBXファイル、 ゴーグル着脱可能なunitypackageを同梱 2019.09.05　・指アニメーションを修正など">
+    "VRchat用を想定したモデルですが、ゲームなど他用途にも利用可能です。 目、眉、口に分けたシェイプキーが入っていますので、組み合わせて表情の作成もできます。 更新履歴 2018.12.19 ・長袖デニムジャケット、ボアブーツ追加 　　　　　　・追加に伴い価格改定\3000→\3500 2019.02.27　・コートウェイト等調整、肩ボーン、UV調整 2019.03.07　・瞬き干渉防止を導入 2019.05.08　・パーツ分けしたFBXファイル、 ゴーグル着脱可能なunitypackageを同梱 2019.09.05　・指アニメーションを修正など">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1111694">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "オリジナル3Dモデル「NiKo」Ver1.06 - ゆどのん工房 - BOOTH">
     <meta name="twitter:description" content=
-    "＠バーチャルマーケット2にて試着できます！ VRchat用を想定したモデルですが、ゲームなど他用途にも利用可能です。 目、眉、口に分けたシェイプキーが入っていますので、組み合わせて表情の作成もできます。 更新履歴 2018.12.19 ・長袖デニムジャケット、ボアブーツ追加 　　　　　　・追加に伴い価格改定\3000→\3500 2019.02.27　・コートウェイト等調整、肩ボーン、UV調整 2019.03.07　・瞬き干渉防止を導入 2019.05.08　・パーツ分けしたFBXファイル、 ゴーグル着脱可能なunitypackageを同梱 2019.09.05　・指アニメーションを修正など">
+    "VRchat用を想定したモデルですが、ゲームなど他用途にも利用可能です。 目、眉、口に分けたシェイプキーが入っていますので、組み合わせて表情の作成もできます。 更新履歴 2018.12.19 ・長袖デニムジャケット、ボアブーツ追加 　　　　　　・追加に伴い価格改定\3000→\3500 2019.02.27　・コートウェイト等調整、肩ボーン、UV調整 2019.03.07　・瞬き干渉防止を導入 2019.05.08　・パーツ分けしたFBXファイル、 ゴーグル着脱可能なunitypackageを同梱 2019.09.05　・指アニメーションを修正など">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/a5a208c6-bf51-4e00-b329-85b58f98dab8/i/1111694/4427e618-725c-432f-b22b-38f358c1b626_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "オリジナル3Dモデル「NiKo」Ver1.06 - ゆどのん工房 - BOOTH">
     <meta property="og:description" content=
-    "＠バーチャルマーケット2にて試着できます！ VRchat用を想定したモデルですが、ゲームなど他用途にも利用可能です。 目、眉、口に分けたシェイプキーが入っていますので、組み合わせて表情の作成もできます。 更新履歴 2018.12.19 ・長袖デニムジャケット、ボアブーツ追加 　　　　　　・追加に伴い価格改定\3000→\3500 2019.02.27　・コートウェイト等調整、肩ボーン、UV調整 2019.03.07　・瞬き干渉防止を導入 2019.05.08　・パーツ分けしたFBXファイル、 ゴーグル着脱可能なunitypackageを同梱 2019.09.05　・指アニメーションを修正など">
+    "VRchat用を想定したモデルですが、ゲームなど他用途にも利用可能です。 目、眉、口に分けたシェイプキーが入っていますので、組み合わせて表情の作成もできます。 更新履歴 2018.12.19 ・長袖デニムジャケット、ボアブーツ追加 　　　　　　・追加に伴い価格改定\3000→\3500 2019.02.27　・コートウェイト等調整、肩ボーン、UV調整 2019.03.07　・瞬き干渉防止を導入 2019.05.08　・パーツ分けしたFBXファイル、 ゴーグル着脱可能なunitypackageを同梱 2019.09.05　・指アニメーションを修正など">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/a5a208c6-bf51-4e00-b329-85b58f98dab8/i/1111694/4427e618-725c-432f-b22b-38f358c1b626_base_resized.jpg">
     <meta property="og:url" content=
@@ -324,7 +324,6 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            ＠バーチャルマーケット2にて試着できます！
                             VRchat用を想定したモデルですが、ゲームなど他用途にも利用可能です。
                             目、眉、口に分けたシェイプキーが入っていますので、組み合わせて表情の作成もできます。
                             更新履歴 2018.12.19 ・長袖デニムジャケット、ボアブーツ追加
