updated at: 2020-01-17 16:51, 四つ葉の帯飾り - CaTrusty - BOOTH

--- a/VRChat/06/976706.html
+++ b/VRChat/06/976706.html
@@ -17,13 +17,13 @@
     <meta name="twitter:description" content=
     "自分用に作った和の入ったガラスモチーフの四つ葉飾りです。 シンプルですが割とローポリなのでワンポイントにでもどうぞ。 帯飾りとしていますが、挿す部分や紐は非表示にすることもできます。 【内容物】 ・unitypackage ・FBX ・テクスチャ ・各種説明書（画像説明ありのPDF形式） 　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります） ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/7c8ec935-e5a9-483e-9300-a34ef3fb4c48_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/f34576f8-0c26-46ce-b65e-96ee4939c011_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="四つ葉の帯飾り - CaTrusty - BOOTH">
     <meta property="og:description" content=
     "自分用に作った和の入ったガラスモチーフの四つ葉飾りです。 シンプルですが割とローポリなのでワンポイントにでもどうぞ。 帯飾りとしていますが、挿す部分や紐は非表示にすることもできます。 【内容物】 ・unitypackage ・FBX ・テクスチャ ・各種説明書（画像説明ありのPDF形式） 　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります） ★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/7c8ec935-e5a9-483e-9300-a34ef3fb4c48_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/f34576f8-0c26-46ce-b65e-96ee4939c011_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/976706">
     <meta name="skip_auto_login" content="">
@@ -243,6 +243,15 @@
                           "market-item-detail-item-image-wrapper">
                             <img alt="四つ葉の帯飾り" class=
                             "market-item-detail-item-image" src=
+                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/f34576f8-0c26-46ce-b65e-96ee4939c011_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="四つ葉の帯飾り" class=
+                            "market-item-detail-item-image"
+                            data-lazy=
                             "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/7c8ec935-e5a9-483e-9300-a34ef3fb4c48_base_resized.jpg">
                           </div>
                         </div>
@@ -252,7 +261,7 @@
                             <img alt="四つ葉の帯飾り" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/5538a5ec-06b6-443a-8bfd-504abbddd2bf_base_resized.jpg">
+                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/20e0f497-6076-4454-8d1b-58317ccbd759_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -261,7 +270,7 @@
                             <img alt="四つ葉の帯飾り" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/337a542d-5585-4407-98c8-49ff9c401d83_base_resized.jpg">
+                            "https://booth.pximg.net/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/2097a1af-c2ac-4278-a94f-51dbb740d7ac_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -269,15 +278,19 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/f34576f8-0c26-46ce-b65e-96ee4939c011_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/7c8ec935-e5a9-483e-9300-a34ef3fb4c48_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/5538a5ec-06b6-443a-8bfd-504abbddd2bf_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/20e0f497-6076-4454-8d1b-58317ccbd759_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/337a542d-5585-4407-98c8-49ff9c401d83_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/2097a1af-c2ac-4278-a94f-51dbb740d7ac_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
