updated at: 2020-01-17 21:10, 【VRC衣装】clothローブ/マント - 紅雨の降る蒼 - BOOTH

--- a/VRChat/77/1256877.html
+++ b/VRChat/77/1256877.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/37301c7a-40ea-4639-a455-c5e6e35d3d3b/i/1256877/5cb88ef3-34c4-4463-b105-3d90be452c29_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1256877">
+    <meta name="ga:shop" content="UA-156452272-1">
     <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
